crates/hir-ty/tests/snapshots/jls_constructor_delegation__ctor_call_firsts.snap
---
source: crates/hir-ty/tests/jls_constructor_delegation.rs
expression: out
---
FILE /src/com/example/Ctors.java:
package com.example;

class Base {
    Base() {}
    Base(int x) {}
}

class Sub extends Base {
    Sub() {
        super();
    }
    Sub(int x) {
        super(x);
    }
    Sub(String s) {
    }
}
