crates/hir-ty/tests/snapshots/jls_constructor_delegation__mutually_recursive_ctors_body.snap
---
source: crates/hir-ty/tests/jls_constructor_delegation.rs
expression: out
---
FILE /src/com/example/Ctors.java:
package com.example;

class Pair {
    Pair() {
        this(1);
    }
    Pair(int x) {
        this();
    }
}
