crates/hir-ty/tests/snapshots/jls_constructor_delegation__no_default_constructor.snap
---
source: crates/hir-ty/tests/jls_constructor_delegation.rs
expression: out
---
FILE /src/com/example/Ctors.java:
package com.example;

class NeedsArg {
    NeedsArg(int x) {}
}

class Broken extends NeedsArg {}

class Fine extends NeedsArg {
    Fine() {
        super(1);
    }
}

class NoCtor {}
class Direct extends NoCtor {}

@6:6: no-default-constructor: There is no default constructor available in 'NeedsArg'
