crates/hir-ty/tests/snapshots/jls_constructor_delegation__private_no_arg_superclass.snap
---
source: crates/hir-ty/tests/jls_constructor_delegation.rs
expression: out
---
FILE /src/com/example/Ctors.java:
package com.example;

class PrivateBase {
    private PrivateBase() {}
}

class Sub extends PrivateBase {}

@6:6: no-default-constructor: There is no default constructor available in 'PrivateBase'
